k8s/gcp/31-petclinic-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: petclinic-ns
  annotations:
    beta.cloud.google.com/backend-config: '{"default":"petclinic-backendconfig"}'
spec:
  type: ClusterIP
  selector:
    app: petclinic
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic
  namespace: petclinic-ns
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petclinic
                port:
                  number: 80
